--- a/app/views/blog_posts/show.html.erb
+++ b/app/views/blog_posts/show.html.erb
@@ -5,4 +5,4 @@
 	<%= @blog_post.description %>
 </p>
 
-<%= link_to "Back to Index", blog_posts_path %> | <%= link_to "Edit", edit_blog_post_path(@blog_post) %>
+<%= link_to "Back to Index", blog_blog_posts_path(@blog) %> | <%= link_to "Edit", edit_blog_blog_post_path(@blog, @blog_post) %>
