--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -10,5 +10,16 @@
 
 <p>
 	<%= link_to "Back to Index", blogs_path %> |
-	<%= link_to "Edit this Blog", edit_blog_path(@blog) %>
+	<%= link_to "Edit this Blog", edit_blog_path(@blog) %> |
+	<%= link_to "Write a blog post", new_blog_blog_post_path(@blog) %>
 </p>
+
+<hr/>
+
+<% @blog.blog_posts.each do |blog_post| %>
+	<div>
+		<%= blog_post.title %> <br/>
+		<%= blog_post.description %> <br/>
+		<%= link_to 'Read more', blog_blog_post_path(@blog, blog_post) %>	
+	</div>
+<% end %>
