Added commenting feature to BlogPosts.

--- a/app/views/blog_posts/show.html.erb
+++ b/app/views/blog_posts/show.html.erb
@@ -6,3 +6,12 @@
 </p>
 
 <%= link_to "Back to Index", blog_blog_posts_path(@blog) %> | <%= link_to "Edit", edit_blog_blog_post_path(@blog, @blog_post) %>
+
+<hr/>
+<b>Comments</b>
+
+<%= render 'comments' %>
+
+<hr/>
+<b> Add Comment</b>
+<%= render 'comments/form' %>
